--- a/springboot/src/main/resources/templates/member.html
+++ b/springboot/src/main/resources/templates/member.html
@@ -33,6 +33,10 @@
     <div class="label">주소</div>
     <div class="value" th:text="${member.getAddress}">충남 아산시 …</div>
   </div>
+  <div class="item">
+    <div class="label">과목</div>
+    <div class="value" th:text="${member.getSubject}">과학 …</div>
+  </div>
 
 
 </main>
