--- a/springboot/src/main/resources/templates/spring-mvc.html
+++ b/springboot/src/main/resources/templates/spring-mvc.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>spring-mvc</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>spring-mvc</h1>
-<h1 th:text="${msg}+ '의 친구'"><h1>
+    <h1>Spring-mvc</h1>
+    <h1 th:text="${msg}"></h1>
 </body>
 </html>
