--- a/springboot/src/main/resources/templates/spring.html
+++ b/springboot/src/main/resources/templates/spring.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>title spring</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>Hello~ Spring!!</h1>
-<h1 th:text="'이름: '+${name}">이름:</h1>
-<h1 th:text="'나이: '+${age}">나이:</h1>
+    <h1>Hello~ Spring!!</h1>
+    <h1 th:text="'이름 : ' + ${name}"></h1>
+    <h1 th:text="'나이 : ' +  ${age}"></h1>
 </body>
 </html>
