--- a/springboot/src/main/resources/templates/fail.html
+++ b/springboot/src/main/resources/templates/fail.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>사원등록 실패</title>
 </head>
 <body>
-<h1>사원등록 실패</h1>
-
-     <a href="/employeeRegister.html">사원등록</a>
+    <h1>사원 등록 실패!!!</h1>
+    <hr>
+    <a href="http://localhost:8080/employeeRegister.html">사원등록</a>
 </body>
 </html>
