--- a/springboot/src/main/resources/templates/success.html
+++ b/springboot/src/main/resources/templates/success.html
@@ -5,8 +5,8 @@
     <title>사원등록 성공</title>
 </head>
 <body>
-    <h1>사원등록 성공</h1>
-   <a href="http://localhost:8080/list">사원 리스트</a>&nbsp;|&nbsp;
-    <a href="/employeeRegister.html">사원등록</a>
+    <h1>사원 등록 성공!!!</h1>
+    <hr>
+    <a href="http://localhost:8080/employee.html">HOME</a>
 </body>
 </html>
